<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6b8de5"
    tools:context=".FragmentysForRegistration.FragmentSignUp">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:id="@+id/tv_sing_in_top_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_35"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_36"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_sign_in_checking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indentation_16"
        android:layout_marginEnd="@dimen/indentation_16"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sing_in_top_label">

        <LinearLayout
            android:id="@+id/ll_sign_in_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/registration_style"
            android:layout_marginTop="@dimen/indentation_32"
            android:orientation="vertical"
            android:paddingTop="@dimen/indentation_16"
            android:paddingBottom="@dimen/indentation_16"
            >

            <com.google.android.material.textfield.TextInputLayout
                app:errorTextColor="@color/error_color"
                app:boxStrokeErrorColor="@color/error_color"
                android:id="@+id/EmailError"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/indentation_16"
                android:layout_marginRight="@dimen/indentation_16"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:hintTextColor="@color/soft_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@+id/et_user_password"
                    android:singleLine="true"
                    android:textColorHighlight="#732a46"
                    android:textColorLink="#D81B60"
                    android:theme="@style/EditTextCommonStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorTextColor="@color/error_color"
                app:boxStrokeErrorColor="@color/error_color"
                android:id="@+id/PasswordError"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/indentation_16"
                android:layout_marginTop="@dimen/indentation_16"
                android:layout_marginRight="@dimen/indentation_16"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:hintTextColor="@color/soft_blue"
                app:passwordToggleDrawable="@drawable/ic_password_eye"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/soft_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Choose password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/et_user_repeat_password"
                    android:singleLine="true"
                    android:textColorHighlight="#732a46"
                    android:textColorLink="#D81B60"
                    android:theme="@style/EditTextCommonStyle" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                app:errorTextColor="@color/error_color"
                app:boxStrokeErrorColor="@color/error_color"
                android:id="@+id/PasswordRepeatError"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/indentation_16"
                android:layout_marginTop="@dimen/indentation_16"
                android:layout_marginRight="@dimen/indentation_16"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:hintTextColor="@color/soft_blue"
                app:passwordToggleDrawable="@drawable/ic_password_eye"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/soft_blue">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/et_user_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Repeat password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/et_user_repeat_password"
                    android:singleLine="true"
                    android:textColorHighlight="#732a46"
                    android:textColorLink="#D81B60"
                    android:theme="@style/EditTextCommonStyle" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_8"
            android:layout_marginBottom="@dimen/indentation_8"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_are_you_agree"
                android:layout_width="@dimen/view_params_24"
                android:layout_height="match_parent"
                android:button="@drawable/toggle_checkbox"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/indentation_8"
                android:textColor="#304C95"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_with_perms_and_privacy"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indentation_16"
        android:layout_marginTop="@dimen/indentation_32"
        android:layout_marginEnd="@dimen/indentation_16"
        android:background="@drawable/registration_style_button"
        android:text="@string/sign_up"
        android:textSize="@dimen/txt_size_14"
        android:textAllCaps="true"
        android:textColor="@color/soft_blue"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_sign_in_checking" />


    <TextView
        android:id="@+id/tv_sign_up_bottom_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indentation_16"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/you_can_sign_in_with"
        android:textColor="@color/soft_white"
        android:textSize="@dimen/indentation_16"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <ImageView
        android:id="@+id/btn_sign_up_facebook"
        android:layout_width="@dimen/indentation_32"
        android:layout_height="@dimen/indentation_32"
        android:layout_marginTop="@dimen/indentation_16"
        android:layout_margin="@dimen/indentation_16"
        android:background="@drawable/facebook_logo_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_bottom_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indentation_16"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/indentation_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_sign_in_label_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/have_an_account"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/txt_size_12"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_sign_in_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="@dimen/view_params_10"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_14"
            android:textStyle="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>